# cuBERT

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  benchmark.cpp  benchmark_mkl.cpp  benchmark_tf.cpp  cuBERT.cpp  cuBERT.h  devel-cpu.Dockerfile  devel-gpu.Dockerfile  devel-py.Dockerfile  joker.yml
benchmark/: benchmark_cu.cpp  benchmark_gemm.cpp  benchmark_tf.cpp
cmake/: FindMKL.cmake  Findtensorflow.cmake  cub.cmake  googletest.cmake  mkl.cmake  protobuf-c.cmake  protobuf.cmake  tf_core_framework.cmake
java/: pom.xml
java/src/main/java/android/annotation/: HalfFloat.java  NonNull.java  Nullable.java
java/src/main/java/android/util/: Half.java
java/src/main/java/com/zhihu/cubert/: Benchmark.java  CLibrary.java  ComputeType.java  Model.java  Output.java  OutputType.java
java/src/test/java/com/zhihu/cubert/: ModelTest.java
python/: _cuBERT.pxd  cuBERT.pyx  cuBERT_benchmark.py  cuBERT_test.py  setup.py
python/libcubert/: __init__.py
src/: cuBERT.cpp  cuBERT.h  half.hpp
src/cuBERT/: Bert.cpp  Bert.h  BertM.cpp  BertM.h  common.cpp  common.h  tokenization.cpp
src/cuBERT/bert/: AdditionalOutputLayer.cpp  AdditionalOutputLayer.h  AttentionMask.cpp  AttentionMask.cu  AttentionMask.h  AttentionSelf.cpp  AttentionSelf.h  Bert.cpp  Bert.h  BertBatchMatMul.cpp  BertBatchMatMul.h  BertEmbeddings.cpp  BertEmbeddings.h  BertPooler.cpp  BertPooler.cu  BertPooler.h  Transformer.cpp  Transformer.h
src/cuBERT/mgpu/: BertMGPU.cpp  BertMGPU.h
src/cuBERT/multi/: BertM.cpp  BertM.h
src/cuBERT/op/: BatchMatMul.cpp  BatchMatMul.h  Dense.cpp  Dense.h  Embedding.cpp  Embedding.cu  Embedding.h  GELU.cpp  GELU.cu  GELU.h  LayerNorm.cpp  LayerNorm.cu  LayerNorm.h  Softmax.cpp  Softmax.cu  Softmax.h  Transpose.cpp  Transpose.h
src/cuBERT/op_att/: AttentionMask.cpp  AttentionMask.cu  AttentionMask.h  AttentionSelf.cpp  AttentionSelf.h  BatchMatMul.cpp  BatchMatMul.h  Transformer.cpp  Transformer.h
src/cuBERT/op_bert/: BertEmbeddings.cpp  BertEmbeddings.h  BertPooler.cpp  BertPooler.cu  BertPooler.h
src/cuBERT/op_out/: AdditionalOutputLayer.cpp  AdditionalOutputLayer.h
src/cuBERT/tensorflow/: Graph.cpp  Graph.h
src/cuBERT/tf/: Graph.cpp  Graph.h
src/utf8proc/: LICENSE.md  README.md
tensorflow/core/framework/: attr_value.proto  function.proto  tensor.proto  types.proto
test/: cuBERT_test.cpp  unit_test.cpp
test/cuBERT/: BertMTest.cpp  BertTest.cpp  common_test.cpp  common_test.h  tokenization_test.cpp
test/cuBERT/bert/: AdditionalOutputLayerTest.cpp  AttentionMaskTest.cpp  AttentionSelfTest.cpp  BertBatchMatMulTest.cpp  BertEmbeddingsTest.cpp  BertPoolerTest.cpp  BertTest.cpp  TransformerTest.cpp  attention_self_test.py  bert_test.py  transformer_test.py
test/cuBERT/mgpu/: BertMGPUTest.cpp
test/cuBERT/multi/: BertMTest.cpp
test/cuBERT/op/: BatchMatMulTest.cpp  DenseTest.cpp  EmbeddingTest.cpp  GELUTest.cpp  LayerNormTest.cpp  SoftmaxTest.cpp  TransposeTest.cpp
test/cuBERT/op_att/: AttentionMaskTest.cpp  AttentionSelfTest.cpp  BatchMatMulTest.cpp  TransformerTest.cpp  attention_self_test.py  modeling.py  transformer_test.py
test/cuBERT/op_bert/: BertEmbeddingsTest.cpp  BertPoolerTest.cpp
test/cuBERT/op_out/: AdditionalOutputLayerTest.cpp
